2009-10-13  Sancho Lerena <slerena@artica.es>

	* bin/PandoraAgent.exe: Last build of agent binary.
	
	* bin/pandora_agent.conf: new default .conf for packaging.
	
	* bin/util/getreg.exe, bin/util/cmp.exe, bin/util/sort.exe: New bin tools
	for the 3.0 agent util directory.
	
	* installer/scripts/install_service_restart.bat: Install daily agent
	restart with AT command.
	
	* installer/scripts/restart_pandora_agent.bat: Make a service restart from
	command line (using net commands).
	
	* installer/pandora.mpi: Many fixes and improvements for the installer.

	* installer/README.txt: Updated readme.

2009-10-06  Ramon Novoa  <rnovoa@artica.es>

	* main.cc: Fixed the agent interval when running in process mode.

	* pandora_windows_service.cc: Moved the startup delay to the right
	  place.

2009-10-05  Ramon Novoa  <rnovoa@artica.es>

	* ftp/pandora_ftp_client.h: Fixed the path of curl.h to match
	  that in the Dev-cpp libcurl devpack.

	* modules/pandora_module_tcpcheck.cc: Properly close the connection
	  socket.

	* modules/pandora_module_regexp.cc: Removed debugging code.

	* modules/pandora_module_perfcounter.cc: Close the query handle even if
	  no data was returned to avoid memory leaks.

	* windows/pandora_windows_info.h,
	  windows/pandora_windows_info.cc,
	  modules/pandora_module_proc.cc: Fixed a process handle leak.

	* configure.in: Improved library detection.

2009-09-24  Sancho Lerena <slerena@artica.es>

	* modules/pandora_module_tcpcheck.cc: WSAStartup memory management 
	was leaking memory, so we will create and destroy in each loop the WSA
	structure. Tested and leak-proof :-))

	* modules/pandora_module_inventory.cc: Fixed typo with string label of 
	services inventory module.

	* bin/PandoraAgent.exe: New binary (woah, compiled from linux!).

	* pandora_windows_service.cc: Fixed problem in os XML Tag, was os_name 
	not os. Fixed problem with windows version, now is passwd full string to xml.  